cluster/apps/default/immich/immich_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 21
  labels:
    app: immich
  name: immich
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: immich
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
      - args:
        - /usr/src/app/entrypoint.sh
        command:
        - /bin/sh
        image: altran1502/immich-web:v1.27.0_37-dev
        imagePullPolicy: Always
        name: immich-web
        ports:
        - containerPort: 3000
          name: immich-http
          protocol: TCP
        resources:
          limits:
            memory: 2Gi
            cpu: 200m
          requests:
            memory: 512Mi
            cpu: 20m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - args:
        - /usr/src/app/entrypoint.sh
        command:
        - /bin/sh
        image: altran1502/immich-machine-learning:v1.27.0_37-dev
        imagePullPolicy: Always
        name: immich-ml
        ports:
        - containerPort: 3003
          name: immich-ml
          protocol: TCP
        resources:
          limits:
            memory: 2Gi
            cpu: 200m
          requests:
            memory: 512Mi
            cpu: 20m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/src/app/upload
          name: immich-data
          # subPath: data
      - args:
        - /usr/src/app/start-microservices.sh
        command:
        - /bin/sh
        image: altran1502/immich-server:v1.27.0_37-dev
        imagePullPolicy: Always
        name: immich-microservices
        ports:
        - containerPort: 3002
          name: immich-ms
          protocol: TCP
        resources:
          limits:
            memory: 2Gi
            cpu: 100m
          requests:
            memory: 512Mi
            cpu: 20m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/src/app/upload
          name: immich-data
          # subPath: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: immich-data
        nfs:
          path: /mnt/data/media/pictures/immich_upload
          server: ${NFS_ADDR}
status:
  availableReplicas: 1
  replicas: 1
