cluster/apps/default/immich/immich_server_service.yml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ports:
  - port: 8000
    protocol: TCP
    targetPort: immich-server
  selector:
    app: immich-server
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: "192.168.178.227"  
  status:
  loadBalancer: {}
