cluster/apps/default/immich/immich_service.yml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ports:
  - name: immich-http
    port: 80
    protocol: TCP
    targetPort: immich-http
  - name: immich-redis
    port: 6379
    protocol: TCP
    targetPort: redis
  selector:
    app: immich
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: "192.168.178.227"  
status:
  loadBalancer: {}
