cluster/apps/default/immich/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name immich
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`immich.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: default
        # - name: authelia
        #   namespace: default
      services:
        - name: *name
          port: 80
          namespace: default
    - kind: Rule
      match: Host(`immich.${SECRET_DOMAIN}`) && PathPrefix(`/api`)
      middlewares:
        - name: headers
          namespace: default
        - name: strip-api-prefix
          namespace: default        
      services:
        - name: immich-server
          port: 8000
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes: 
      - /api
